--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block buttons %}
-    <a href="/users/{{ user.user_id }}" class="btn btn-outline-primary">Cancel</button>
+    <a href="/users/{{ user.user_id }}" class="btn btn-outline-primary">Cancel</a>
     <button type="submit" class="btn btn-success">Save</button>
 {% endblock %}
 
