--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -2,12 +2,11 @@
 
 {% block form_header %}
     <h1>Edit a user</h1>
-    <form action="/users/{{ user.user_id }}/edit"  method="POST">
+    <form action="/users/{{ user.id }}/edit"  method="POST">
 {% endblock %}
 
 {% block buttons %}
-    <a href="/users/{{ user.user_id }}" class="btn btn-outline-primary">Cancel</a>
+    <a href="/users/{{ user.id }}" class="btn btn-outline-primary">Cancel</a>
     <button type="submit" class="btn btn-success">Save</button>
 {% endblock %}
 
-{% endblock %}
