--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<img src="{{ user.image_url }}" alt="user_img">
+
+<img class="img-fluid" src="{{ user.image_url }}" alt="user_img">
 <h2>{{ user.first_name }} {{ user.last_name }}</h2>
 <a role="button" href="/users/{{ user.id }}/edit" class="btn btn-secondary">Edit</a>
 <form action="/users/{{ user.id }}/delete" method="POST">
