Post code review, fixed user edit form

--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -10,3 +10,6 @@
     <button type="submit" class="btn btn-success">Save</button>
 {% endblock %}
 
+<!-- Jinja Comment -->
+{#{% include '_user_form.html' %}#}
+
