--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,10 @@
     <main class="d-flex justify-content-center">
 
         <div class="mt-4 card col-8">
+            {% for msg in get_flashed_messages() %}
+                <div class="alert-danger alert">{{ msg }}</div>
+            {% endfor %}
+
             <div class="card-body col">
                 {% block content %}
                 {% endblock %}
