--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -1,18 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    
 
     {% block form_header %}
 
     {% endblock %}
     <label for="first_name">First Name</label>
-    <input id="first_name" name="first_name" type="text" required placeholder="Enter a First Name" maxlength="50">
+    <input id="first_name" name="first_name" type="text" value="{{ user.first_name }}" required placeholder="Enter a First Name" maxlength="50">
 
     <label for="last_name">Last Name</label>
-    <input id="last_name" name="last_name" type="text" placeholder="Enter a Last Name" maxlength="50">
+    <input id="last_name" name="last_name" type="text" value="{{ user.last_name }}" placeholder="Enter a Last Name" maxlength="50">
 
     <label for="img_url">Image URL:</label>
-    <input name="img_url" type="url" placeholder="Provide an image of this user">
+    <input name="img_url" type="text" value="{{ user.image_url }}" placeholder="Provide an image of this user">
     {% block buttons %}{% endblock %}
 </form>
 
