--- a/templates/user_listing.html
+++ b/templates/user_listing.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<!-- User-listing -->
 <h1 class="card-title">Users:</h1>
-<ul class="">
+<ul>
     {% for user in users %}
-        <li class=""> <a href="/users/{{ user.id }}">{{ user.first_name }} {{user.last_name}}</a> </li>
+        <li> <a href="/users/{{ user.id }}">{{ user.first_name }} {{user.last_name}}</a> </li>
     {% endfor %}
 </ul>
 <a href="/users/new" class="btn btn-primary" role="button">Add User</a>
