Added templates for posts

--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -1,7 +1,7 @@
 {% extends 'user_form.html' %}
 
 {% block form_header %}
-    <h1>Create a user</h1>
+    <h1 class="card-title">Create a user</h1>
     <form action="/users/new"  method="POST">
 {% endblock %}
 
