--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -10,4 +10,12 @@
     <button role="button" class="btn btn-danger" type="submit">Delete</button>
 </form>
 
+<div>
+    <h2>Posts</h2>
+    <ul>
+        {% for post in posts %}
+        <li> <a href="/posts/{{ post.id }}"> {{ post.title }} </a></li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
