--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,8 +6,10 @@
 <p>{{post.content}}</p>
 
 <p><i>By {{ user.first_name }} {{ user.last_name }}</i> </p>
+<form action="/posts/{{ post.id }}/delete" method="post">
 <a href="/users/{{ user.id }}" class="btn btn-outline-info">Cancel</a>
 <a href="/posts/{{ post.id }}/edit" class="btn btn-primary">Edit</a>
-<a href="/posts/{{ post.id }}/delete" class="btn btn-danger">Delete</a>
+    <button class="btn btn-danger">Delete</button>
+</form>
 
 {% endblock %}
