post code review

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,7 +5,7 @@
 
 <p>{{post.content}}</p>
 
-<p><i>By {{ user.first_name }} {{ user.last_name }}</i> </p>
+<p><i>By {{ post.user.first_name }} {{ post.user.last_name }}</i> </p>
 <form action="/posts/{{ post.id }}/delete" method="post">
 <a href="/users/{{ user.id }}" class="btn btn-outline-info">Cancel</a>
 <a href="/posts/{{ post.id }}/edit" class="btn btn-primary">Edit</a>
