--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,6 +6,16 @@
 <p>{{post.content}}</p>
 
 <p><i>By {{ post.user.first_name }} {{ post.user.last_name }}</i> </p>
+
+<p>
+    <b>Tags:</b> 
+    {% for tag in post.tags %}
+    <span class="badge bg-light text-dark">
+        <a href="tags/{{tag.id}}">{{tag.name}}</a>
+    </span>
+    {% endfor %}
+</p>
+
 <form action="/posts/{{ post.id }}/delete" method="post">
 <a href="/users/{{ user.id }}" class="btn btn-outline-info">Cancel</a>
 <a href="/posts/{{ post.id }}/edit" class="btn btn-primary">Edit</a>
