--- a/templates/_post_inputs.html
+++ b/templates/_post_inputs.html
@@ -7,6 +7,7 @@
     placeholder="Enter the content of your post."> {{ post.content }} </textarea>
 
 {% for tag in tags %}
-<input type="checkbox" name="{{ tag.name }}" id="{{ tag.name }}">
+<input type="checkbox" name="tags" id="{{ tag.name }}" 
+    value="{{ tag.name }}" {% if tag in post.tags %} checked {% endif %}>
 <label for="{{ tag.name }}">{{ tag.name }}</label>
 {% endfor %}
