--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -11,13 +11,13 @@
     <b>Tags:</b> 
     {% for tag in post.tags %}
     <span class="badge bg-light text-dark">
-        <a href="tags/{{tag.id}}">{{tag.name}}</a>
+        <a href="/tags/{{tag.id}}">{{tag.name}}</a>
     </span>
     {% endfor %}
 </p>
 
 <form action="/posts/{{ post.id }}/delete" method="post">
-<a href="/users/{{ user.id }}" class="btn btn-outline-info">Cancel</a>
+<a href="/users/{{ post.user.id }}" class="btn btn-outline-info">Cancel</a>
 <a href="/posts/{{ post.id }}/edit" class="btn btn-primary">Edit</a>
     <button class="btn btn-danger">Delete</button>
 </form>
