--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 
+<h2>User: {{ user.first_name }} {{ user.last_name }}</h2>
 <img class="img-fluid" src="{{ user.image_url }}" alt="user_img">
-<h2>{{ user.first_name }} {{ user.last_name }}</h2>
 <a role="button" href="/users/{{ user.id }}/edit" class="btn btn-secondary">Edit</a>
 <form action="/users/{{ user.id }}/delete" method="POST">
     <button role="button" class="btn btn-danger" type="submit">Delete</button>
