--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -3,10 +3,12 @@
 {% block content %}
 
 <h1 class="card-title">Add post for {{user.first_name}} {{user.last_name}}</h1>
+<div class="col-7">
 <form action="/users/{{user.id}}/posts/new" method="POST">
 
     {% include '_post_inputs.html' %}
     <a href="/users/{{ user.id }}" class="btn btn-outline-info">Cancel</a>
     <button type="submit" class="btn btn-success">Add</button>
 </form>
+</div>
 {% endblock %}
