--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -2,6 +2,7 @@
 
 {% block form_header %}
     <h1 class="card-title">Edit a user</h1>
+    <div class="col-7">
     <form action="/users/{{ user.id }}/edit"  method="POST">
 {% endblock %}
 
